--- a/c/index.yaml
+++ b/c/index.yaml
@@ -2,3 +2,4 @@ default:
   name: zsync
   version: 0.6.2
   summary: 'http based rsync style file fetching with precomputed checksums'
+  sourcedir: .
