put this in /usr

--- a/c/scripts/build
+++ b/c/scripts/build
@@ -4,6 +4,6 @@ aclocal
 autoheader
 automake --add-missing
 autoconf
-./configure
+./configure --prefix=/usr
 make install LDFLAGS='-lcurl' DESTDIR="$DESTDIR"
 
