--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq libcurl4-openssl-dev
-script: cd c && ./configure && make
+script: cd c && ./doit.sh
 
 notifications:
   irc: "irc.freenode.net#eam"
